# torrent-cleaner

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  job_manager.rs  main.rs  setup.rs
src/jobs/: handle_forgotten.rs  handle_not_working.rs  handle_orphaned.rs  mod.rs
src/jobs/enums/: action_type.rs  mod.rs  strike_type.rs
src/jobs/handle_forgotten/: action_taker.rs  handle_forgotten.rs  notifier.rs  receiver.rs  striker.rs
src/jobs/handle_not_working/: action_taker.rs  handle_not_working.rs  notifier.rs  receiver.rs  runner.rs  striker.rs
src/jobs/handle_orphaned/: action_taker.rs  handle_orphaned.rs  notifier.rs  receiver.rs  runner.rs  striker.rs
src/jobs/handle_unlinked/: action_taker.rs  handle_unlinked.rs  mod.rs  notifier.rs  receiver.rs  runner.rs  striker.rs
src/jobs/handle_unregistered/: action_taker.rs  notifier.rs  receiver.rs  runner.rs  striker.rs
src/jobs/health_check/: file_health.rs  mod.rs  runner.rs
src/jobs/health_check_files/: runner.rs
src/jobs/utils/: discord_webhook_utils.rs  file_utils.rs  mod.rs  strike_utils.rs
src/logger/: logger.rs  mod.rs
src/logger/enums/: category.rs  log_level.rs
src/torrent_clients/: mod.rs  torrent_manager.rs
src/torrent_clients/adapters/: mod.rs  qbittorrent.rs
src/torrent_clients/enums/: any_client.rs  mod.rs  torrent_state.rs  tracker_status.rs
src/torrent_clients/models/: mod.rs  torrent.rs  torrent_file.rs  tracker.rs
src/torrent_clients/traits/: mod.rs  torrent_client.rs
src/utils/: date_utils.rs  db_manager.rs  discord_webhook_utils.rs  mod.rs
