[package]
name = "torrent-cleaner"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["cookies", "json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.42"
walkdir = "2.5.0"
rusqlite = { version = "0.37.0", features = ["chrono"] }
