[package]
name = "torrent-cleaner"
version = "3.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.13.1", features = ["cookies", "json", "query", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.43"
walkdir = "2.5.0"
rusqlite = { version = "0.37.0", features = ["chrono"] }
